# Unikey-Wayland

./: .gitignore  CHANGELOG.md  FAQ.md  PKGBUILD  README.md  a.out  build_all.ps1  build_client.ps1  build_qt.ps1  build_setup.ps1  fix.patch  io.github.ubuntu2310fake.UnikeyWayland.desktop  io.github.ubuntu2310fake.UnikeyWayland.metainfo.xml  license.txt  package_arch.sh  patch.diff  patch2.diff  patch3.diff  patch_spec_author.py  post_install.sh  readme.txt  rebuild_engine.ps1  run_debugger.sh  run_x11.sh  stress_test_1000_expected.txt  stress_test_1000_words.txt  test-aur.sh  test_bamboo_d.c  test_bs  test_bs.cpp  test_dbus  test_dbus.cpp  test_freeze  test_freeze.c  test_grab  test_grab.c  test_ibus  test_ibus.cpp  test_im.c  test_keys  (+31 more)
.agents/: AGENTS.md
.github/workflows/: ci-cd.yml  windows-ci.yml
ImTester/: CMakeLists.txt  im-helper.cpp  main.cpp
byteio/: byteio.cpp  byteio.h  byteio.plg  byteio.vcproj  byteio.vcproj.old  prehdr.cpp  prehdr.h
deb_root/DEBIAN/: control
debian/: changelog  control  copyright  files  rules  unikey-wayland.postinst
ibus-engine/: ibus-setup-unikey-wayland.desktop  main.cpp  main.cpp.orig  unikey-wayland.xml
keyhook/: Keyhook.dsp  Keyhook.plg  keyhook.cpp  keyhook.def  vietkey.cpp  vietkey.h
newkey/: NewKey.rc  NewKey.vcproj  NewKey.vcproj.old  about.cpp  about.h  button.cpp  button.h  encode.cpp  encode.cpp.tmp  expdlg.cpp  expdlg.h  font.cpp  font.h  keydlg.cpp  keydlg.h  label.cpp  label.h  macrodlg.cpp  macrodlg.h  mactab.cpp  mactab.h  mainwnd.cpp  mainwnd.h  newkey.sln  newkey.sln.old  odmenu.cpp  odmenu.h  prehdr.cpp  prehdr.h  resource.h  smedit.cpp  smedit.h  tooldlg-temp.cpp  tooldlg.cpp  tooldlg.h  ukmenu.cpp  ukmenu.h  userpref.cpp  userpref.h  util.cpp  (+1 more)
newkey/res/CVS/: Entries  Repository  Root
pkg_root/: .INSTALL  .PKGINFO
pkg_root/usr/share/metainfo/: unikey-wayland.metainfo.xml
releases/: unikey-wayland-1.0.0-1-x86_64.pkg.tar.zst  unikey-wayland-1.0.0-1.fc44.x86_64.rpm  unikey-wayland-1.0.0-hf-x86_64.pkg.tar.zst  unikey-wayland-1.0.0_hf-1.fc44.x86_64.rpm  unikey-wayland-1.0.1-1-x86_64.pkg.tar.zst  unikey-wayland-1.0.1-1.fc44.x86_64.rpm  unikey-wayland-1.0.1_hf-1-x86_64.pkg.tar.zst  unikey-wayland-1.0.1_hf-1.fc44.x86_64.rpm  unikey-wayland-1.0.2-1-x86_64.pkg.tar.zst  unikey-wayland-1.0.2-1.fc44.src.rpm  unikey-wayland-1.0.2-1.fc44.x86_64.rpm  unikey-wayland_1.0.0_amd64.deb  unikey-wayland_1.0.0_hf_amd64.deb  unikey-wayland_1.0.1_amd64.deb  unikey-wayland_1.0.1_hf_amd64.deb  unikey-wayland_1.0.2_amd64.deb
rpmbuild/SOURCES/: uk-wayland-im  unikey-wayland  unikey-wayland.desktop
rpmbuild/SPECS/: unikey-wayland.spec
rtfio/: intrtfio.h
uvconvert/: Makefile  changes.txt  prehdr.cpp  prehdr.h  readme.txt  uvconvert.cpp  uvconvert.plg  uvconvert.vcproj  uvconvert.vcproj.old
vnconv/: Makefile  charset.cpp  convert.cpp  vnconv.plg  vnconv.vcproj
wayland-client/: CMakeLists.txt
wayland-client/include/: ukengine_wrapper.h  windows.h  windows_macros.h
wayland-client/src/: bamboo_wrapper.go  go.mod  go.sum  libbamboo.h  macrodialog.cpp  macrodialog.h  main.cpp  main.cpp.orig  main.cpp.rej  mainwindow.cpp  mainwindow.h  print_im.go  test_bamboo.c  test_bamboo.go  test_bamboo_bs.go  test_bamboo_bytes.go  test_bamboo_full.go  test_bamboo_mje.go  test_can_process.c  test_can_process.go  test_can_process_space.go  test_cawcj.c  test_common_bytes  test_common_bytes.cpp  test_sim  test_sim.cpp  trayicon.cpp  trayicon.h  ukengine_wrapper.cpp  windowtracker.cpp  windowtracker.h
windows-client/: CMakeLists.txt  Setup.cpp  setup.bat
windows-client/src/: keycons.h  main.cpp  mainwindow.cpp  mainwindow.h  trayicon.cpp  trayicon.h
windows-engine/: CMakeLists.txt  TsfEngine.cpp  TsfEngine.def  build_exe.ps1  main.cpp
windows-tsf-poc/: TsfPoC.cpp  TsfPoC.def  build.ps1  register.ps1  unregister.ps1
x11-client/src/: main.cpp
